# market-intel

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ADR-001-second-agent.md  CODEX-BRIEFING.md  PITFALLS.md  PRD-MVP.md  PRD.md  PRINCIPLES.md  ROADMAP.md
scripts/: ingest_research.py
src/agents/: research.py
src/agents/tools/: knowledge.py
src/chat/: chat.py
src/data/: fetcher.py
src/knowledge/: embedder.py  store.py
src/llm/: provider.py
src/memory/: working.py
src/rag/: embedder.py  loader.py  retriever.py  store.py
tests/: test_working.py
